--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "sanity": "^4.5.0",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "lucide-react": "^0.470.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.11",
